--- a/src/components/CategoryMenu/s.module.css
+++ b/src/components/CategoryMenu/s.module.css
@@ -4,6 +4,9 @@
     width: fit-content; 
     font-size: 18px;
     background-color: #1876D1;
+    height: 100%;
+    overflow: auto;
+    max-width: 240px;
 }
 
 .menuWrapper a {
