--- a/src/components/UI/Grid/s.module.css
+++ b/src/components/UI/Grid/s.module.css
@@ -4,10 +4,11 @@
     max-width: 1920px;
     margin: 0 auto;
     grid-template-areas:
-        "head head "
-        "menu  content "
-        "menu  content ";
+        "head head head"
+        "menu  content current_order"
+        "menu  content current_order"
+        "menu  content amount";
     height: 100vh;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: auto 2fr 1fr;
+    grid-template-rows: auto 1fr auto;
 }
