--- a/src/components/CategoryMenu/s.module.css
+++ b/src/components/CategoryMenu/s.module.css
@@ -1,12 +1,14 @@
 .menuWrapper {
     display: flex;
     flex-direction: column;
-    width: fit-content; 
+    width: fit-content;
     font-size: 18px;
-    background-color: #1876D1;
+    background-color: #1876d1;
     height: 100%;
     overflow: auto;
     max-width: 240px;
+
+    min-width: 200px;
 }
 
 .menuWrapper a {
