--- a/src/components/UI/Button/s.module.css
+++ b/src/components/UI/Button/s.module.css
@@ -3,8 +3,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 50px;
     gap: 10px;
-    margin: 20px;
+    margin: 5px;
     text-align: center;
     text-decoration: none;
     border: none;
