--- a/src/components/UI/Button/s.module.css
+++ b/src/components/UI/Button/s.module.css
@@ -10,7 +10,7 @@
     text-decoration: none;
     border: none;
     cursor: pointer;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
     font-weight: 200;
     font-size: 0.875rem;
     line-height: 1.75;
