--- a/src/components/UI/ModalWindow/s.module.css
+++ b/src/components/UI/ModalWindow/s.module.css
@@ -39,7 +39,7 @@
 }
 .modalWindow p:nth-child(3) input {
     outline: none;
-    border: none;
+    border: 1px solid gray;
     padding: 10px;
     border-radius: 8px;
     margin: 0 0 0 10px;
@@ -48,6 +48,9 @@
     color: #ff4d00;
     font-weight: 800;
     text-align: center;
+}
+.modalWindow p:nth-child(3) input:focus{
+    background: #bebebe;
 }
 .closeBtn {
     position: absolute;
