--- a/src/components/ContentItem/s.module.css
+++ b/src/components/ContentItem/s.module.css
@@ -10,11 +10,11 @@
     top: 5px;
     left: 5px;
     color: white;
-    background-color: #00000031;
+    background-color: #000000a8;
     backdrop-filter: blur(5px);
     padding: 5px;
     border-radius: 4px;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 .contentItem_item img {
@@ -27,8 +27,9 @@
     bottom: 5px;
     right: 5px;
     color: white;
-    background-color: #1876d1;
+    background-color: #000000a8;
+    backdrop-filter: blur(5px);
     padding: 5px;
-    border-radius: 4px;
-    font-size: 1.2rem;
+    border-radius: 5px;
+    font-size: 1rem;
 }
