--- a/src/components/ContentItem/s.module.css
+++ b/src/components/ContentItem/s.module.css
@@ -3,17 +3,25 @@
     position: relative;
     width: 200px;
     cursor: pointer;
+    border-radius: 8px;
+}
+.contentItem_item:hover {
+    outline: 1px solid #f8f8f8;
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(112, 112, 112, 0) 61%, rgba(183, 183, 183, 0.3) 100%);
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(112, 112, 112, 0) 61%, rgba(183, 183, 183, 0.3) 100%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(112, 112, 112, 0) 61%, rgba(183, 183, 183, 0.3) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#4db7b7b7', GradientType=0);
 }
 
 .contentItem_item h4 {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    color: white;
-    background-color: #000000a8;
-    backdrop-filter: blur(5px);
+    /* position: absolute; */
+    /* top: 5px;
+    left: 5px; */
+    /* color: white; */
+    /* background-color: #000000a8; */
+    /* backdrop-filter: blur(5px); */
     padding: 5px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     font-size: 1rem;
 }
 
@@ -22,14 +30,15 @@
     width: 100%;
     border-radius: 5px;
 }
-.contentItem_item div {
-    position: absolute;
+.contentItem_item p {
+    /* position: absolute;
     bottom: 5px;
     right: 5px;
     color: white;
     background-color: #000000a8;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px); */
     padding: 5px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     font-size: 1rem;
+    align-self: center;
 }
