--- a/src/components/Header/s.module.css
+++ b/src/components/Header/s.module.css
@@ -1,4 +1,8 @@
-.myStyle a {
+.box_wrap{
+    background-color: blueviolet !important;
+    width: 100%;
+}
+.box_wrap a {
     text-decoration: none;
     color: white;
 }
