--- a/src/components/UI/Button/s.module.css
+++ b/src/components/UI/Button/s.module.css
@@ -1,3 +1,5 @@
+@import "../../../variables.css";
+
 /* Основные стили кнопки */
 .button {
     display: flex;
@@ -25,7 +27,7 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
         color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     color: #fff;
-    background-color: #1976d2;
+    background-color: var(--bg-color);
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
