--- a/src/components/CategoryMenu/s.module.css
+++ b/src/components/CategoryMenu/s.module.css
@@ -9,8 +9,8 @@
     height: 100%;
     overflow: auto;
     max-width: 240px;
-
     min-width: 200px;
+    transition: var(--transition-time);
 }
 
 .menuWrapper a {
