--- a/src/components/UI/Content/s.module.css
+++ b/src/components/UI/Content/s.module.css
@@ -1,5 +1,9 @@
-.content{
+@import "../../../variables.css";
+
+.content {
     height: 100%;
     overflow: auto;
-padding: 10px;
+    padding: 10px;
+    background-color: var(--content-bg-color);
+    transition: var(--transition-time);
 }
