--- a/src/variables.css
+++ b/src/variables.css
@@ -1,3 +1,10 @@
-:root{
-    --bg-color: #1876D1;
+:root {
+    --bg-color: #1876d1;
+    --content-bg-color: #fff;
+    --transition-time: 0.5s;
+}
+
+.dark {
+    --bg-color: #082949;
+    --content-bg-color: #7e7e7e;
 }
