--- a/src/components/Pages/MainPage/s.module.css
+++ b/src/components/Pages/MainPage/s.module.css
@@ -1,8 +1,16 @@
 .mainPage_wrapper {
 }
-.wrapStyle {
+/* .wrapStyle {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+} */
+
+.wrapStyle{
+    display: grid;
+    place-content: center;
+    height: 100%;
+    text-align: center;
+    gap: 20px;
 }
