--- a/src/components/OrderHistoryContainer/s.module.css
+++ b/src/components/OrderHistoryContainer/s.module.css
@@ -1,11 +1,13 @@
-@import '../../variables.css';
-.OrderHistoryContainer_amountWrapper > div{
-border-bottom: 1px solid gray ;
-width: fit-content;
+@import "../../variables.css";
+.OrderHistoryContainer_amountWrapper > div {
+    border-bottom: 1px solid gray;
+    width: fit-content;
 }
-.OrderHistoryContainer_amountWrapper > p{
-padding: 10px;
+.OrderHistoryContainer_amountWrapper > a {
+    display: block;
+    padding: 10px;
+    color: black;
 }
-.accent{
-    color: var(--accent-color)
+.accent {
+    color: var(--accent-color);
 }
